<resources>
    <string name="app_name">DistanceTrackerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scr_permissions_continue_button">Continue</string>
    <string name="scr_permissions_permission_description_text_view">Welcome to Distance tracker. In order to use our application we will first need to request location permission from you. Otherwise we will not be able to provide you with our service. If you agree and wish to continue tap on the button below.</string>
    <string name="lorem_ipsum_average">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="lorem_ipsum_lengthy">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="scr_permissions_permission_required">Permission required</string>
    <string name="cannot_run_app_message">This application cannot work without location permission</string>
    <string name="scr_map_tap_on_my_location_text_view">Tap on \'My Location\' Button</string>
    <string name="scr_map_start_button">Start</string>
    <string name="scr_map_stop_button">Stop</string>
    <string name="scr_map_reset_button">Reset</string>
    <string name="src_map_background_location_needed_message">Background location permission to this application, without it we will not be able to provide you with our service</string>
    <string name="scr_map_go_message">GO</string>
    <string name="srv_tracker_distance_travelled_message">Distance Travelled</string>
    <string name="scr_result_distance_text_view">Distance</string>
    <string name="scr_result_time_text_view">Time</string>
    <string name="scr_result_share_buttom">share</string>
    <string name="scr_result_distance_formatted_string">%1s km</string>
    <string name="scr_result_share_result">I traveled %1s km in $2s</string>
</resources>